--- a/docs/src/cfe_es.dox
+++ b/docs/src/cfe_es.dox
@@ -220,7 +220,7 @@
   cFE will also reset every application that is running at the time the command is received. 
 
   Also part of this service is the Exception and Reset (ER) Log, which has a command for 
-  \link #CFE_ES_WRITE_ERLOG_CC dumping \endlink or \link #CFE_ES_CLEAR_ERLOG_CC clearing \endlink
+  \link #CFE_ES_WRITE_ER_LOG_CC dumping \endlink or \link #CFE_ES_CLEAR_ER_LOG_CC clearing \endlink
   the log and telemetry to show the number of entries in the log.  In addition to the ER log,
    the user may find information about the most recent reset in the ES task housekeeping telemetry.
 
@@ -731,7 +731,7 @@
   allocates a section of the Critical Data Store memory for the application's use and
   assigns the Application specified name to the memory area.  The operator can find
   and learn the characteristics of these Critical Data Stores by using the
-  \link #CFE_ES_DUMP_CDS_REG_CC Dump CDS Registry Command. \endlink  This command will
+  \link #CFE_ES_DUMP_CDS_REGISTRY_CC Dump CDS Registry Command. \endlink  This command will
   dump the contents of the CDS Registry maintained by the Executive Services into a
   file that can be downlinked and examined by the operator.
   
@@ -856,7 +856,7 @@
   by mission requirements).
     
   An operator can obtain information about an Application's Memory Pool by using
-  the \link #CFE_ES_TLM_POOL_STATS_CC Telemeter Memory Pool Statistics Command.
+  the \link #CFE_ES_SEND_MEM_POOL_STATS_CC Telemeter Memory Pool Statistics Command.
   \endlink
   
   This command will cause Executive Services to extract pertinent statistics
@@ -878,7 +878,7 @@
   
   <UL>
     <LI> <B>Memory Pool Handle</B> - the handle, as provided by the operator in the
-         \link #CFE_ES_TLM_POOL_STATS_CC Telemeter Memory Pool Statistics Command. \endlink
+         \link #CFE_ES_SEND_MEM_POOL_STATS_CC Telemeter Memory Pool Statistics Command. \endlink
          This repeating of the handle in telemetry insures the operator knows which Memory
          Pool Statistics are being viewed <BR>
     <LI> <B>Pool Size</B> - The total size of the memory pool (in bytes)<BR>
