--- a/docs/src/cfe_sb.dox
+++ b/docs/src/cfe_sb.dox
@@ -60,32 +60,29 @@
   All commands, telemetry, and other data that are passed between the ground and
   the spacecraft, and between subsystems of the spacecraft, are considered to be
   messages. The most common message format is CCSDS (Consultative Committee for
-  Space Data Systems).
-
-  The cFE software bus was designed with 'hooks' to allow message formats other
-  than CCSDS to be used. The APIs that are used to set and get message header
-  fields are intentionally designed to be decoupled from CCSDS.
+  Space Data Systems) in <a href="https://public.ccsds.org/Pubs/133x0b2.pdf">
+  CCSDS Space Packet Protocol</a>, but can be customized by replacing the message module.
 
   There are two general types of messages - commands (or command packets) and
   telemetry (or telemetry packets).  Command packets are sent to a particular
   software task from the ground (or another task).  Telemetry packets are sent
   from a particular software task to the ground (or other tasks).
 
-  Each packet begins with a header that includes the message identifier, often
-  abbreviated as MsgId or message ID. The MsgId for CCSDS messages is the first
-  16 bits of the packet. The message 'type' indicator (command or telemetry) is
-  embedded in the Message ID. The header also contains a packet length field and a
-  packet sequence field. The packet sequence field is incremented by the software
-  bus for telemetry packets each time a packet is sent. The software bus does not
-  increment the sequence field for command packets. See the section named 'Packet
-  Sequence Values' for more detail.
-
+  The concept of a message identifier is utilized to provide abstraction
+  from header implementation, often abbreviated as message ID, MsgId, or MID.
+  Header and message identifier values should not be accessed directly to
+  avoid implementation specific dependencies.
+ 
   Telemetry packets typically contain a timestamp that indicates when the packet
   was produced.  Command packets typically contain a command code that identifies
   the particular type of command.
 
-  The software bus provides APIs for 'setting' and 'getting' the fields in the
-  header of the message.
+  The message module provides APIs for 'setting' and 'getting' the fields in the
+  header of the message.  The message module was separated from software bus
+  to enable users to customize message headers without requiring clone and
+  own of the entire cfe repository.  To customize, remove the built in msg
+  module from the build and replace with custom implementation.  See sample
+  target definitions folder for examples.
 
   Following the header is the user defined message data.
 
