Fix #1009, Alignment pattern - documentation
- Documentation updates for applying the alignment pattern
- Added Cmd to all command types
- Updated example code
- Converted Syslog to SysLog for consistency
- CFE_SB_RcvMsg now CFE_SB_ReceiveBuffer
- Replaced references to deprecated CFE_SB API's with MSG API's

--- a/docs/src/cfe_api.dox
+++ b/docs/src/cfe_api.dox
@@ -133,16 +133,14 @@
     </UL>
     <LI> \ref CFEAPISBMessage
     <UL>
-      <LI> #CFE_SB_SendMsg - \copybrief CFE_SB_SendMsg
-      <LI> #CFE_SB_PassMsg - \copybrief CFE_SB_PassMsg
-      <LI> #CFE_SB_RcvMsg - \copybrief CFE_SB_RcvMsg
+      <LI> #CFE_SB_TransmitMsg - \copybrief CFE_SB_TransmitMsg
+      <LI> #CFE_SB_ReceiveBuffer - \copybrief CFE_SB_ReceiveBuffer
     </UL>
     <LI> \ref CFEAPISBZeroCopy
     <UL>
       <LI> #CFE_SB_ZeroCopyGetPtr - \copybrief CFE_SB_ZeroCopyGetPtr
       <LI> #CFE_SB_ZeroCopyReleasePtr - \copybrief CFE_SB_ZeroCopyReleasePtr
-      <LI> #CFE_SB_ZeroCopySend - \copybrief CFE_SB_ZeroCopySend
-      <LI> #CFE_SB_ZeroCopyPass - \copybrief CFE_SB_ZeroCopyPass
+      <LI> #CFE_SB_TransmitBuffer - \copybrief CFE_SB_TransmitBuffer
     </UL>
     <LI> \ref CFEAPISBSetMessage
     <UL>
