Fix #1149, remove cfeesugshellsrv from user guide

--- a/docs/src/cfe_es.dox
+++ b/docs/src/cfe_es.dox
@@ -41,7 +41,6 @@
     <LI> \subpage cfeesugcdssrv <BR>
     <LI> \subpage cfeesugmempoolsrv <BR>
     <LI> \subpage cfeesugsyslogsrv <BR>
-    <LI> \subpage cfeesugshellsrv <BR>
     <LI> \subpage cfeesugversion <BR>
     <LI> \subpage cfeesugfaq <BR>
   </UL>
@@ -796,19 +795,8 @@
   A count of the number of entries in the log is present in the ES housekeeping
   telemetry.
 
-  Next: \ref cfeesugshellsrv <BR>
-  Prev: \ref cfeesugmempoolsrv <BR>
-  Up To: \ref cfeesovr
-**/
-
-/**
-  \page cfeesugshellsrv OS Shell
-
-  NOTE: This cfe functionality is targeted for deprecation in favor of
-  optionally including this capability via an application.
-    
   Next: \ref cfeesugversion <BR>
-  Prev: \ref cfeesugsyslogsrv <BR>
+  Prev: \ref cfeesugmempoolsrv <BR>
   Up To: \ref cfeesovr
 **/
 
@@ -818,7 +806,7 @@
   Version information is reported at startup, and upon receipt of a No-op command
     
   Next: \ref cfeesugfaq <BR>
-  Prev: \ref cfeesugshellsrv <BR>
+  Prev: \ref cfeesugsyslogsrv <BR>
   Up To: \ref cfeesovr
 **/
 
@@ -827,7 +815,7 @@
 
 
     
-  Prev: \ref cfeesugshellsrv <BR>
+  Prev: \ref cfeesugversion <BR>
   Up To: \ref cfeesovr
 **/
 
